--- a/package.json
+++ b/package.json
@@ -1,19 +1,25 @@
 {
-    "name": "doggoes",
-    "version": "1.0.0",
-    "description": "Assignment project #2 of the intro-to-web-dev-V2 course.",
-    "main": "index.js",
-    "scripts": {
-        "test": "eslint ./script/"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/gomain/intro-to-web-dev-v2-doggos.git"
-    },
-    "author": "gomain@gmail.com",
-    "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/gomain/intro-to-web-dev-v2-doggos/issues"
-    },
-    "homepage": "https://github.com/gomain/intro-to-web-dev-v2-doggos#readme"
+  "name": "doggoes",
+  "version": "1.0.0",
+  "description": "Assignment project #2 of the intro-to-web-dev-V2 course.",
+  "main": "index.js",
+  "scripts": {
+    "list": "eslint ./script/"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/gomain/intro-to-web-dev-v2-doggos.git"
+  },
+  "author": "gomain@gmail.com",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/gomain/intro-to-web-dev-v2-doggos/issues"
+  },
+  "homepage": "https://github.com/gomain/intro-to-web-dev-v2-doggos#readme",
+  "dependencies": {
+    "serve": "*"
+  },
+  "devDependencies": {
+    "cypress": "^3.4.1"
+  }
 }
