--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,9 @@ language: node_js
 node_js:
   - "8"
 before_install:
-  - "npm install eslint"
   - "npm install cypress"
 before-script:
   - "npm run lint"
   - "serve"
 script:
-  - "cypress run"
+  - "npm test"
