--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ node_js:
   - "8"
 before_script:
   - "npm run lint"
-  - "serve"
+  - "serve --no-clipboard &"
 script:
   - "npm test"
+  - kill $(jobs -p) || true
