--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: node_js
 node_js:
-  - "8"
+  - 10
+
+cache:
+  directories:
+    - ~/.cache
 before_script:
   - "npm run lint"
   - "serve --no-clipboard &"
