Feature: loading spinner. Eslint: 5. Cypress: 3.4.1

--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
 
   },
   "devDependencies": {
-    "eslint": "*",
+    "eslint": "5",
     "serve": "*",
-    "cypress": "*"
+    "cypress": "3.4.1"
   }
 }
