--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,4 +1,4 @@
-env:
+xenv:
   browser: true
   es6: true
 extends: 'eslint:recommended'
@@ -21,4 +21,6 @@ rules:
     - error
     - always
   no-extra-semi:
+    - warn
+  no-console:
     - warn
