--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,12 @@ addons:
 cache:
   directories:
     - ~/.cache
+install:
+  - "npm install -g cypress-3.4.1"
+  - "npm install"
 before_script:
   - "npm run lint"
   - "serve --no-clipboard &"
 script:
-  - "npm test"
+  - "cypress run"
   - kill $(jobs -p) || true
