--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ cache:
   directories:
     - ~/.cache
 install:
-  - "npm install -g cypress-3.4.1"
+  - "npm install -g cypress@3.4.1"
   - "npm install"
 before_script:
   - "npm run lint"
