--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,11 @@ cache:
   directories:
     - ~/.cache
 install:
-  - "npm install cypress@3.4.1 --no-save"
   - "npm install"
+  - "npm install cypress@3.4.1 --save-dev"
 before_script:
   - "npm run lint"
   - "serve --no-clipboard &"
 script:
-  - "$(npm bin)/cypress run"
+  - "npm test"
   - kill $(jobs -p) || true
